# h0039

./: cli.py  employees.csv  policy.csv  policy.py  pyproject.toml  reporter.py  test_policy.html  test_policy.md  test_policy2.md  test_whitelist.md  trip_parser.py
gpx_files/: lisi_shanghai_suzhou_20260618.gpx  zhangsan_20260615.gpx  zhangsan_20260616.gpx  zhangsan_cross_month.gpx
reports/: export_expense.csv  export_points.csv  sample_expense.csv  sample_map.html  sample_report.html  sample_report.md  张三_2026-06_expense.csv  张三_2026-06_map.html  张三_2026-06_points.csv  张三_2026-06_report.html  张三_2026-06_report.md  张三_2026-07_expense.csv  张三_2026-07_map.html  张三_2026-07_report.md  李四_2026-06_expense.csv  李四_2026-06_map.html  李四_2026-06_report.md
reports_final/: 张三_2026-06_map.html  张三_2026-06_report.html  张三_2026-06_report.md  张三_2026-07_expense.csv  张三_2026-07_map.html  张三_2026-07_report.html  张三_2026-07_report.md  李四_2026-06_expense.csv  李四_2026-06_map.html  李四_2026-06_report.html  李四_2026-06_report.md
reports_v2/: 张三_2026-06_map.html  张三_2026-06_report.md  张三_2026-07_map.html  张三_2026-07_report.md  李四_2026-06_map.html  李四_2026-06_report.md
reports_v3/: 张三_2026-06_expense.csv  张三_2026-06_map.html  张三_2026-06_report.md  张三_2026-07_map.html  张三_2026-07_points.csv  张三_2026-07_report.md  李四_2026-06_expense.csv  李四_2026-06_map.html  李四_2026-06_points.csv  李四_2026-06_report.md
reports_v4/: 王五_2026-06_expense.csv  王五_2026-06_map.html  王五_2026-06_points.csv  王五_2026-06_report.html  王五_2026-06_report.md
reports_v5/: 王五_2026-06_expense.csv  王五_2026-06_map.html  (+3 more)
(+4 files in other folders)
